--- a/lib/views/user/_show_user_info.html.erb
+++ b/lib/views/user/_show_user_info.html.erb
@@ -29,12 +29,8 @@
 
     <%= link_to _('Change your email'), signchangeemail_path %> |
     <%= link_to _('Change your Address'), user_edit_address_line_path %> |
-    <%= link_to _('Change your Status'), user_edit_status_flag_path %>
-
     <%= link_to _('Change your password'), new_password_change_path %> |
-    <%= link_to _('Change your email'), signchangeemail_path %>
-    <% if AlaveteliConfiguration.enable_two_factor_auth %>
-    |
+    <% if AlaveteliConfiguration.enable_two_factor_auth %> |
       <% if @display_user.otp_enabled? %>
         <%= link_to _('View your two factor authentication one time passcode'), one_time_password_path %>
       <% else %>
